--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="img-box">
-          <img src="./img/temp-profile.jpg" alt="profile image" />
+          <img src="./img/profile.jpg" alt="profile image" />
           <p>Web Developer</p>
         </div>
       </div>
