New Profile & Fixed Message In JS

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <h1>ANISH BUDHA</h1>
           <a
             class="resume-btn"
-            href="./img/temp-profile.jpg"
+            href="./src/resume-AnishBudha.pdf"
             download="resume-Anish_Budha"
             >RESUME</a
           >
@@ -41,7 +41,7 @@
         </div>
 
         <div class="img-box">
-          <img src="./img/profile.jpg" alt="profile image" />
+          <img src="./src/profile.jpg" alt="profile image" />
           <p>Web Developer</p>
         </div>
       </div>
@@ -51,24 +51,24 @@
       <div class="text">
         <h1 class="about-me">ABOUT ME</h1>
         <p class="about-p">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus,
-          provident. Cumque tempora dolore suscipit possimus illo quo corrupti
-          minima, laudantium maxime, veritatis unde animi adipisci aut nisi,
-          porro itaque cum nemo molestiae dolorem enim ab ipsum voluptatem? In
-          fugiat quaerat, cumque voluptatum eius voluptatibus iure totam
-          laudantium doloribus expedita eaque!
+          I am an aspiring web developer and cyber security analyst from Canada.
+          I like to create a minimalist design with complex security measures
+          behind it. I am currently enrolled at Seneca College and soon will be
+          graduating with a diploma in Computer Programming. I feel really lucky
+          that soon I will be starting my career in something I am fond of.
         </p>
 
         <h1 class="honesty">ACADEMIC HONESTY</h1>
         <p class="honesty-p">
           <q
             ><em>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
-              ducimus, praesentium quo beatae a ex, perspiciatis explicabo
-              veniam esse tempore non numquam molestias iste, et vel ullam id
-              perferendis? Suscipit est, in iste doloremque tenetur eius!
-              Dignissimos dolor culpa, iusto, eos eligendi voluptas quia
-              veritatis, expedita autem quaerat laborum vitae?</em
+              I declare that my assessment is wholly my own work in accordance
+              with Seneca Academic Policy. No part of this assessment has been
+              copied manually or electronically from any other source (including
+              web sites) except for the information supplied by the WEB222
+              instructors and / or made available in this assessment for my use.
+              I also declare that no part of this assignment has been
+              distributed to other students.</em
             ></q
           >
         </p>
@@ -96,11 +96,11 @@
           </tr>
           <tr>
             <td><strong>STUDENT ID:</strong></td>
-            <td>later</td>
+            <td>174760215</td>
           </tr>
           <tr>
             <td><strong>INSTRUCTOR:</strong></td>
-            <td>later</td>
+            <td>Mohammad Shamas</td>
           </tr>
         </table>
       </div>
@@ -146,17 +146,17 @@
         <div class="web">
           <h1>WEB DEVELOPMENT</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
-            numquam nesciunt debitis quidem hic nostrum quod repudiandae
-            veritatis nemo! Itaque.
+            I am very proficient in front-end web development. I specialize in
+            clean and minimalist designs. I have a strong hold on HTML, CSS,
+            Javascript, JQuery, React, and Vue.
           </p>
         </div>
         <div class="security">
           <h1>CYBER SECURITY</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
-            numquam nesciunt debitis quidem hic nostrum quod repudiandae
-            veritatis nemo! Itaque.
+            I always look for vulnerabilities and improvements. I have a great
+            methodology of reconnaissance, scanning & enumeration, exploitation
+            & exploit development, and report writing.
           </p>
         </div>
       </div>
@@ -164,17 +164,16 @@
         <div class="graphic">
           <h1>GRAPHIC DESIGNING</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
-            numquam nesciunt debitis quidem hic nostrum quod repudiandae
-            veritatis nemo! Itaque.
+            I have a good grasp of applications like Photoshop, Illustrator, and
+            InDesign. I am inclined toward UI/UX principles. I am done with web
+            and logo designs.
           </p>
         </div>
         <div class="game">
           <h1>GAME DEVELOPMENT</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
-            numquam nesciunt debitis quidem hic nostrum quod repudiandae
-            veritatis nemo! Itaque.
+            I can generate game scripts and storyboards. And can code base
+            engine of the games as well as animate characters.
           </p>
         </div>
       </div>
