--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           that soon I will be starting my career in something I am fond of.
         </p>
 
-        <h1 class="honesty">ACADEMIC HONESTY</h1>
+        <!-- <h1 class="honesty">ACADEMIC HONESTY</h1>
         <p class="honesty-p">
           <q
             ><em>
@@ -73,10 +73,10 @@
             ></q
           >
         </p>
-        <p class="date"><strong>Date:</strong> December 5</p>
+        <p class="date"><strong>Date:</strong> December 5</p> -->
       </div>
 
-      <div class="table">
+      <!-- <div class="table">
         <h1>BASIC INFORMATION</h1>
         <table>
           <tr>
@@ -104,7 +104,7 @@
             <td>Mohammad Shamas</td>
           </tr>
         </table>
-      </div>
+      </div> -->
     </section>
 
     <section id="education">
